--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
 # Production API URL
-# Replace with your Railway backend URL
-VITE_API_URL=https://taskmanager-production-xxxx.up.railway.app
+# Railway backend URL
+VITE_API_URL=https://task-manager-production-7c7a.up.railway.app
